// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Date /> should render correctly 1`] = `
<Date__Container
  isInline={false}
>
  <span
    className="card__date__month"
  >
    mars
  </span>
  <span
    className="card__date__day"
  >
    10
  </span>
</Date__Container>
`;

exports[`<Date /> should render correctly with other date 1`] = `
<Date__Container
  isInline={false}
>
  <span
    className="card__date__month"
  >
    juin
  </span>
  <span
    className="card__date__day"
  >
    15
  </span>
</Date__Container>
`;
